--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,6 @@
+<button id="hello1">Hello1</button>
+<button id="hello2">Hello2</button>
+
+<div id="root"></div>
+
 <script type="module" src="./index.tsx"></script>
